--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "react-scripts": "^5.0.1",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
